--- a/css/style.css
+++ b/css/style.css
@@ -50,12 +50,14 @@ a{
 /* Classes and IDs */
 .button{
   font-size: 1em;
+  text-align: center;
   color:var(--primary);
   background:none;
   border: 2px solid var(--primary);
   border-radius: 50px;
   padding: 10px 15px;
   text-transform: uppercase;
+  max-width: 12em;
 
 
 
@@ -161,7 +163,8 @@ body{
   /* background: #07083E; */
   text-align: center;
   margin: 20px 0;
-  padding:30px 10px;
+  /* padding: 2em 1em; */
+  padding:10px;
 }
 
 
@@ -170,12 +173,13 @@ body{
   grid-column: span 4;
   text-align: center;
   display: block;
-  padding:20px 10px;
+  padding:40px 10px;
   color:white;
 }
 #skills img{
-  height:80px;
-  margin:10px auto;
+  height:90px;
+  margin:5px auto 20px;
+  padding-bottom:7px;
 }
 #skills li{
   text-align: center;
@@ -211,30 +215,73 @@ form input::placeholder, form textarea::placeholder{
 
  }
 
- .copyright{
+
+ footer{
+   background: #14153D url("../assets/footer_image.png")  top center/40% no-repeat;
+   padding-bottom: 2rem;
+   padding-top: 2rem;
+ }
+ footer .copyright{
    grid-column: span 3;
-   font-size: 1em;
+   font-size: 0.8em;
    align-items: center;
+   justify-content: center;
+   /* margin:1.5rem auto auto auto; */
  }
- #footer{
-   background: url("../assets/footer_image.png") center center /contain no-repeat;
- }
+
  footer ul{
-   grid-column: 6/9;
+   grid-column: 7/9;
    display:flex;
+   justify-content: flex-end;
+
  }
- footer li{
+
+ .social li{
    width: 40%;
+   background: none;
  }
  footer img{
-   width: 30px;
+   width: 20px;
  }
 
 /* 77777777777777777777777777777777777777777777777777777777777777777777777 */
 /* tablet width till 930px */
-@media screen and (min-width:480px){
+@media screen and (min-width:620px){
 body{
-  font-size: 20px;
+  font-size: 17px;
+}
+.site-nav{
+  grid-column: 1/4;
+}
+#welcome .welcome-text{
+  grid-column: 1/5;
+}
+#welcome .welcome-img{
+  grid-column: 5/9;
+  overflow: none;
+}
+
+.projects a:first-child{
+  grid-column: 1/5;
+  /* width:100px; */
+}
+.projects a:nth-child(2){
+  grid-column:5/8;
+}
+.projects a{
+  flex-direction: column;
+}
+.projects img{
+  max-width: 180px;
+  margin-bottom: 20px;
+}
+
+#skills {
+  padding: 1em 5em;
+}
+
+#contact, .form{
+  padding:5em;
 }
 }
 
